2008-02-19  Marek Habersack  <mhabersack@novell.com>

	* HttpParamsCollection.cs: do not override the NVC behavior for
	GetValues - values from different sources (Form, Query, Cookies,
	ServerVariables) must be kept separate for this purpose. This is
	also the behavior of MS.NET. Fixes bug #362189

2008-02-18  Marek Habersack  <mhabersack@novell.com>

	* HttpRuntime.cs: When app is offline, send status code 503
	instead of 200. Fixes bug #357565

2008-02-10  Gert Driesen  <drieseng@users.sourceforge.net>

	* HttpException.cs: Avoid IndexOutOfRangeException when there are no
	error lines.

2008-02-07  Gert Driesen  <drieseng@users.sourceforge.net>

	* HttpException.cs: Removed CWL.

2008-02-07  Marek Habersack  <mhabersack@novell.com>

	* HttpException.cs: more exception output compatibility changes to
	match MS.NET.

2008-02-07  Vladimir Krasnov  <vladimirk@mainsoft.com>

	* HttpContext.jvm.cs: added CurrentHandlerInternal property

2008-02-07  Marek Habersack  <mhabersack@novell.com>

	* HttpException.cs: moved several strings to constants, for easier
	maintenance. 
	Added 3 new constructors which let the caller to set the exception
	description.
	The Description property is now settable.
	The stack trace at the bottom of the file is written after the
	terminating </html>, inside a HTML comment. Format changed to
	match MS.NET.
	Error 404 is handled in a special way, to match the output with
	MS.NET.

	* HttpContext.cs, StaticFileHandler.cs, HttpApplication.cs: use
	the new HttpException constructor for 404.

2008-02-07  Vladimir Krasnov  <vladimirk@mainsoft.com>

	* HttpResponse.cs: fixed AddHeadersNoCache, removed date_header since
	java app server adds it, under TARGET_J2EE.

2008-02-06  Marek Habersack  <mhabersack@novell.com>

	* HttpApplicationFactory.cs: in FireOnAppEnd, set app_type to null
	after the event has been fired.

	* HttpRuntime.cs: when switching to offline mode fire the
	shutdown events. Fixes bug #357565.