@@ -1,3 +1,13 @@
+2008-02-25  Marek Habersack  <mhabersack@novell.com>
+
+	* HttpContext.cs: correctly set the timeout if the user has
+	specified a timeout which, when converted to milliseconds yields a
+	value larger than one allowed by Timer.Change. This can happen,
+	for instance, when HttpServerUtility.ScriptTimeout is set to
+	Int32.MaxValue. Previously, when something like that happened, the
+	value was converted to 0ms, giving an instantenous timer
+	expiration and, what follows, a request "timeout".
+
 2008-02-19  Marek Habersack  <mhabersack@novell.com>
 
 	* HttpParamsCollection.cs: do not override the NVC behavior for
